--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -11,11 +11,11 @@ dock_hsplit_1=0
 dock_hsplit_2=280
 dock_hsplit_3=-280
 dock_hsplit_4=0
+dock_9_selected_tab_idx=0
 dock_3="Scene,Import"
 dock_4="FileSystem,History"
 dock_5="Inspector,Signals,Groups"
 dock_9="Output,Debugger,Audio,Animation,Shader Editor,Search Results,AnimationTree,ResourcePreloader,ShaderFile,SpriteFrames,Theme,Polygon,TileSet,TileMap,Replication,GridMap"
-dock_9_selected_tab_idx=0
 
 [docks/FileSystem]
 
@@ -24,8 +24,8 @@ v_split_offset=0
 display_mode=0
 file_sort=0
 file_list_display_mode=1
-selected_paths=PackedStringArray("res://assets/shaders/shadow.gdshader")
-uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/", "res://assets/sprites/", "res://assets/shaders/")
+selected_paths=PackedStringArray("res://assets/sprites/char.png")
+uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://assets/sprites/", "res://assets/shaders/")
 
 [docks/History]
 
@@ -54,7 +54,7 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/arena.gd", "res://scripts/character.gd", "res://scripts/global.gd"]
+open_scripts=["res://scripts/arena.gd", "res://scripts/character.gd", "res://scripts/global.gd", "res://scripts/utils/sprite.gd", "res://scripts/unit.gd"]
 selected_script="res://scripts/character.gd"
 open_help=["AudioStreamPlayer", "Object", "Rect2"]
 script_split_offset=200
@@ -63,7 +63,7 @@ zoom_factor=0.9285713
 
 [GameView]
 
-floating_window_rect=Rect2i(714, 371, 492, 290)
+floating_window_rect=Rect2i(0, 23, 1920, 1017)
 floating_window_screen=1
 
 [ShaderEditor]
