--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,12 @@
 list=[{
+"base": &"Sprite2D",
+"class": &"Sprite",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/utils/sprite.gd"
+}, {
 "base": &"CharacterBody2D",
 "class": &"Char",
 "icon": "",
@@ -14,4 +22,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://scripts/arena.gd"
+}, {
+"base": &"CharacterBody2D",
+"class": &"Unit",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/unit.gd"
 }]
